# CS5330

./: .gitignore  README.md
hw1/: CMakeLists.txt  a.out  hw1  main.cpp  result.txt
hw1/statics/: readme.txt
proj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
proj1/imgDisplay/: CMakeLists.txt  Makefile  cmake_install.cmake  imgDisplay.cpp
proj1/statics/: readme.txt
proj1/vidDisplay/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filters.cpp  filters.h  vidDisplay.cpp
proj2/: CMakeLists.txt  csv_util.cpp  csv_util.h  distanceMetrics.cpp  distanceMetrics.h  featureExtractor.cpp  features.cpp  features.h  imageRetriever.cpp
proj2/statics/: readme.txt
proj3/: CMakeLists.txt  csv_util.cpp  csv_util.h  objectRecognizer.cpp  processors.cpp  processors.h  staticOR.cpp
proj3/statics/: readme.txt
proj4/: CMakeLists.txt  arSystem.cpp  aruco.cpp  harrisCorner.cpp  opengl_example.cpp  processors.cpp  processors.h
proj4/statics/: readme.txt
proj5/: MNISTRecognition.py  MNISTTest.py  digitEmbeddingSpace.py  digitEmbeddingSpace2.py  digitRecognition.py  examNetwork.py  experiment.py  live_digit_recognition.py  mobilenet.py  utils.py
proj5/statics/: readme.txt
